Fixed read more bug for producer description on mobile

--- a/wine/static/wine/findwine.scss
+++ b/wine/static/wine/findwine.scss
@@ -27,10 +27,7 @@ $silver: #a5b2b3;
 $bronze: #b5664a;
 
 // Fonts
-
-// TOP is for PRODUCTION
-$primary-font: 'Gotham SSm A', 'Gotham SSm B';
-//$primary-font: 'Gotham SSm A', sans-serif;
+$primary-font: 'Gotham SSm A', 'Gotham SSm B', sans-serif;
 
 // Mixins
 
@@ -79,6 +76,7 @@ body {
 }
 
 pre {
+  font-family: $primary-font;
   white-space: pre-line;
   text-align: left;
   margin-bottom: 0px;
@@ -1744,7 +1742,7 @@ select:-webkit-autofill {
     margin-left: 15px;
     margin-right: 15px;
     margin-bottom: 20px;
-    height: 43px;
+    //height: 43px;
     overflow: hidden;
 
     @include breakpoint(lg) {
@@ -3054,7 +3052,7 @@ select:-webkit-autofill {
     color: $light-grey-text;
     font-size: 14px;
     line-height: 22px;
-    padding: 0px 15px 0px 15px;
+    padding: 0px;
     margin-bottom: 15px;
     overflow: hidden;
 
